[tool.poetry]
name = "summer-code-jam-8"
version = "0.1.0"
description = "The Python Discord 2021 Summer Code Jam submission for the Feisty Ferrets."
authors = ["ToxicKidz <itztoxickidz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
lark = "^0.11.3"
windows-curses = {version = "^2.2.0", optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.2"
pre-commit = "^2.13.0"
flake8-annotations = "2.6.2"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.0.0"
taskipy = "^1.8.1"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
windows = ["windows-curses"]
